// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrival query should return valid arrival field 1`] = `
Object {
  "data": Object {
    "allBookings": Object {
      "edges": Array [
        Object {
          "node": Object {
            "arrival": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": null,
              "time": null,
            },
          },
        },
        Object {
          "node": Object {
            "arrival": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": null,
              "time": null,
            },
          },
        },
        Object {
          "node": Object {
            "arrival": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": null,
              "time": null,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`departure query should return valid departure field 1`] = `
Object {
  "data": Object {
    "allBookings": Object {
      "edges": Array [
        Object {
          "node": Object {
            "departure": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": null,
              "time": null,
            },
          },
        },
        Object {
          "node": Object {
            "departure": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": null,
              "time": null,
            },
          },
        },
        Object {
          "node": Object {
            "departure": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": null,
              "time": null,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`flights query should return valid legs field 1`] = `
Object {
  "data": Object {
    "allBookings": Object {
      "edges": Array [
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T23:30:00.000Z",
                  "time": "2017-09-09T21:30:00.000Z",
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T21:10:00.000Z",
                  "time": "2017-09-09T20:10:00.000Z",
                },
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T11:00:00.000Z",
                  "time": "2017-09-09T09:00:00.000Z",
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T08:05:00.000Z",
                  "time": "2017-09-09T07:05:00.000Z",
                },
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T18:15:00.000Z",
                  "time": "2017-09-09T15:15:00.000Z",
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T15:00:00.000Z",
                  "time": "2017-09-09T13:00:00.000Z",
                },
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-10T02:00:00.000Z",
                  "time": "2017-09-09T22:00:00.000Z",
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-09-09T19:50:00.000Z",
                  "time": "2017-09-09T16:50:00.000Z",
                },
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-08-19T03:40:00.000Z",
                  "time": "2017-08-18T23:40:00.000Z",
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                    "locationId": "MOCKED",
                  },
                  "localTime": "2017-08-18T22:05:00.000Z",
                  "time": "2017-08-18T20:05:00.000Z",
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`id query should return IDs of bookings 1`] = `
Object {
  "data": Object {
    "allBookings": Object {
      "edges": Array [
        Object {
          "node": Object {
            "databaseId": 2707251,
            "id": "Qm9va2luZzoyNzA3MjUx",
          },
        },
        Object {
          "node": Object {
            "databaseId": 2707229,
            "id": "Qm9va2luZzoyNzA3MjI5",
          },
        },
        Object {
          "node": Object {
            "databaseId": 2707224,
            "id": "Qm9va2luZzoyNzA3MjI0",
          },
        },
      ],
    },
  },
}
`;
